new handmade slider for gallery in 320px

--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
 
       <div class="button button--green header__button">
         <a href="#" class="button__tickets">КВИТКИ</a>
-        <button href="#" class="button__arrow button__arrow--green"></button>
+        <button href="#" class="button button__arrow button__arrow--green"></button>
       </div>
 
       <div class="smth">
@@ -147,7 +147,7 @@
               <div class="swiper-zoom-container">
                 <img src="./images/gallery/gallery_image1.jpg"
                   alt="gallery_image1"
-                >
+                                  >
               </div>
             </div>
 
@@ -155,7 +155,7 @@
               <div class="swiper-zoom-container">
                 <img src="./images/gallery/gallery_image2.jpg"
                   alt="gallery_image2"
-                >
+                                  >
               </div>
             </div>
 
@@ -163,7 +163,7 @@
               <div class="swiper-zoom-container">
                 <img src="./images/gallery/gallery_image3.jpg"
                   alt="gallery_image3"
-                >
+                                  >
               </div>
             </div>
 
@@ -171,7 +171,7 @@
               <div class="swiper-zoom-container">
                 <img src="./images/gallery/gallery_image4.jpg"
                   alt="gallery_image4"
-                >
+                                  >
               </div>
             </div>
           </div>
@@ -200,7 +200,16 @@
               button__subscribe"
               required
             >
-            <button class="button__arrow button__arrow--red"></button>
+            <button
+              class="button
+              button__arrow
+              button__arrow--red"
+              type="submit"
+              action="#"
+              id="submit"
+              onsubmit="this.reset(); return false;"
+            >
+            </button>
           </div>
         </div>
       </section>
