new handmade slider for gallery in 320px ready

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,6 @@
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&family=Montserrat:wght@400;700&family=Roboto:wght@400;500&family=Space+Grotesk:wght@700&family=Space+Mono&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&family=Montserrat:wght@400;700&family=Roboto:wght@400;500&family=Space+Grotesk:wght@700&family=Space+Mono&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Roboto:wght@400;500&family=Space+Grotesk:wght@700&family=Space+Mono&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
     <link rel="stylesheet" href="styles/main.scss">
   </head>
   <body>
@@ -141,42 +140,41 @@
           Галерея
         </h2>
 
-        <div class="swiper mySwiper">
-          <div class="swiper-wrapper">
-            <div class="swiper-slide">
-              <div class="swiper-zoom-container">
-                <img src="./images/gallery/gallery_image1.jpg"
-                  alt="gallery_image1"
-                                  >
-              </div>
-            </div>
-
-            <div class="swiper-slide">
-              <div class="swiper-zoom-container">
-                <img src="./images/gallery/gallery_image2.jpg"
-                  alt="gallery_image2"
-                                  >
-              </div>
-            </div>
-
-            <div class="swiper-slide">
-              <div class="swiper-zoom-container">
-                <img src="./images/gallery/gallery_image3.jpg"
-                  alt="gallery_image3"
-                                  >
-              </div>
-            </div>
-
-            <div class="swiper-slide">
-              <div class="swiper-zoom-container">
-                <img src="./images/gallery/gallery_image4.jpg"
-                  alt="gallery_image4"
-                                  >
-              </div>
-            </div>
+        <div class="slider">
+          <div class="mySlides fade">
+            <img src="./images/gallery/gallery_image1.jpg"
+              alt="gallery_image1"
+              class="gallery__picture"
+            >
           </div>
 
-          <div class="swiper-pagination"></div>
+          <div class="mySlides fade">
+            <img src="./images/gallery/gallery_image2.jpg"
+              alt="gallery_image2"
+              class="gallery__picture"
+            >
+          </div>
+
+          <div class="mySlides fade">
+            <img src="./images/gallery/gallery_image3.jpg"
+              alt="gallery_image3"
+              class="gallery__picture"
+            >
+          </div>
+
+          <div class="mySlides fade">
+            <img src="./images/gallery/gallery_image4.jpg"
+              alt="gallery_image4"
+              class="gallery__picture"
+            >
+          </div>
+        </div>
+
+        <div class="dots">
+          <span class="dot" onclick="currentSlide(1)"></span>
+          <span class="dot" onclick="currentSlide(2)"></span>
+          <span class="dot" onclick="currentSlide(3)"></span>
+          <span class="dot" onclick="currentSlide(4)"></span>
         </div>
       </section>
 
@@ -272,23 +270,6 @@
       <p class="footer__text">Designed by Zhyriada Marina</p>
       <p class="footer__text">Copyright © 2019. All Rights Reserved.</p>
     </footer>
-    <!-- Swiper JS -->
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-
-    <!-- Initialize Swiper -->
-    <script>
-      var swiper = new Swiper(".mySwiper", {
-        zoom: true,
-        navigation: {
-          nextEl: ".swiper-button-next",
-          prevEl: ".swiper-button-prev",
-        },
-        pagination: {
-          el: ".swiper-pagination",
-          clickable: true,
-        },
-      });
-    </script>
 
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
