--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&family=Montserrat:wght@400;700&family=Roboto:wght@400;500&family=Space+Grotesk:wght@700&family=Space+Mono&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Roboto:wght@400;500&family=Space+Grotesk:wght@700&family=Space+Mono&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/main.scss">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   </head>
   <body>
     <div class="upward"></div>
@@ -140,7 +141,7 @@
           Галерея
         </h2>
 
-        <div class="slider">
+        <div class="slider gallery gallery__slider">
           <div class="mySlides fade">
             <img src="./images/gallery/gallery_image1.jpg"
               alt="gallery_image1"
