Refactor according with suggested changes

--- a/src/index.html
+++ b/src/index.html
@@ -60,7 +60,7 @@
             <div class="menu__links">
               <a href="#gallery" class="menu__link">Галерея</a>
               <a href="#about-us" class="menu__link">Про нас</a>
-              <a href="#actuals" class="menu__link">Виставки та події</a>
+              <a href="#events" class="menu__link">Виставки та події</a>
               <a href="#contacts" class="menu__link">Контакти</a>
             </div>
           </div>
@@ -92,15 +92,15 @@
         <div class="container">
           <div class="events__event events--1">
             <div class="grid">
-              <h2 class="grid__item--desktop-1-5 grid__item--tablet-1-4 grid__item--mobile-1-2 page__title">
+              <h2 class="grid__item--desktop-1-5 grid__item--smallDesktop-1-6 grid__item--tablet-1-4 grid__item--smallTablet-1-6 grid__item--mobile-1-2 page__title">
                 Актуальні події
               </h2>
               <img
                 src="/images/photos/01.jpg"
                 alt="Йду і повертаюсь"
-                class="grid__item--desktop-1-7 grid__item--tablet-1-6 grid__item--mobile-1-2 events__image"
+                class="grid__item--desktop-1-7 grid__item--smallDesktop-1-6 grid__item--tablet-1-6 grid__item--smallTablet-1-6 grid__item--mobile-1-2 events__image"
               >
-              <div class="grid__item--desktop-9-12 grid__item--tablet-1-4 grid__item--mobile-1-2 events__description">
+              <div class="grid__item--desktop-9-12 grid__item--smallDesktop-1-6 grid__item--tablet-1-4 grid__item--smallTablet-1-6 grid__item--mobile-1-2 events__description">
                 <div class="events__description-flex">
                   <p class="events__type">ВИСТАВКА</p>
                   <p class="events__dates">26.08-29.11.2019</p>
@@ -225,7 +225,7 @@
         </div>
       </div>
 
-      <div class="footer page__section page__section--footer">
+      <footer class="footer page__section page__section--footer" id="about-us">
         <div class="container">
           <div class="footer__nav grid">
             <div class="footer__icons grid__item--desktop-1-1 grid__item--tablet-1-1 grid__item--mobile-1-2">
@@ -341,7 +341,7 @@
             </p>
           </div>
         </div>
-      </div>
+      </footer>
     </main>
   </body>
 </html>
