ready to check without slider

--- a/src/index.html
+++ b/src/index.html
@@ -141,7 +141,57 @@
           Галерея
         </h2>
 
-        <div class="slider gallery gallery__slider">
+        <div class="gallery container-gallery">
+          <img src="./images/gallery/gallery_image1.jpg"
+            alt="gallery-image"
+            class="
+            container-gallery
+            container-gallery__image
+            container-gallery__image--1"
+          >
+
+          <img src="./images/gallery/gallery_imageX.jpg"
+            alt="gallery-image"
+            class="
+            container-gallery
+            container-gallery__image
+            container-gallery__image--X"
+          >
+
+          <img src="./images/gallery/gallery_image2.jpg"
+            alt="gallery-image"
+            class="
+            container-gallery
+            container-gallery__image
+            container-gallery__image--2"
+          >
+
+          <img src="./images/gallery/gallery_image3.jpg"
+            alt="gallery-image"
+            class="
+            container-gallery
+            container-gallery__image
+            container-gallery__image--3"
+          >
+
+          <img src="./images/gallery/gallery_image4.jpg"
+            alt="gallery-image"
+            class="
+            container-gallery
+            container-gallery__image
+            container-gallery__image--4"
+          >
+        </div>
+
+        <div class="dots">
+          <span class="dot active"></span>
+          <span class="dot"></span>
+          <span class="dot"></span>
+          <span class="dot"></span>
+        </div>
+
+        <!--
+        <div class="slider">
           <div class="mySlides fade">
             <img src="./images/gallery/gallery_image1.jpg"
               alt="gallery_image1"
@@ -177,6 +227,7 @@
           <span class="dot"></span>
           <span class="dot"></span>
         </div>
+        -->
       </section>
 
       <section class="subscribe">
