--- a/src/index.html
+++ b/src/index.html
@@ -40,11 +40,11 @@
 
           <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
 
-          <div class="header__tickets tickets">
+          <a href="#events" class="header__tickets tickets">
             <div class="tickets__title">Квитки</div>
 
-            <button href="#actuals" class="tickets__button"></button>
-          </div>
+            <button class="tickets__button" type="button"></button>
+          </a>
 
           <a href="#actuals" class="header__to-events">Події</a>
         </div>
@@ -144,15 +144,17 @@
             alt="Від класицизму до романтизму"
             class="events__image--big"
           >
-          <div class="grid">
-            <div class="events__big-block grid__item--desktop-4-9 grid__item--tablet-2-5 grid__item--mobile-1-2">
-              <div class="events__description-flex events__description-flex--big">
-                <p class="events__type events__type--big">ЛЕКЦІЯ</p>
-                <p class="events__dates events__dates--big">26/08/2019 - 11:00</p>
+          <div class="container">
+            <div class="grid">
+              <div class="events__big-block grid__item--desktop-4-9 grid__item--tablet-2-5 grid__item--mobile-1-2">
+                <div class="events__description-flex events__description-flex--big">
+                  <p class="events__type events__type--big">ЛЕКЦІЯ</p>
+                  <p class="events__dates events__dates--big">26/08/2019 - 11:00</p>
+                </div>
+                <h3 class="events__name--big">
+                  Від класицизму до романтизму
+                </h3>
               </div>
-              <h3 class="events__name--big">
-                Від класицизму до романтизму
-              </h3>
             </div>
           </div>
         </div>
@@ -218,7 +220,7 @@
                 required
               >
 
-              <button href="#actuals" class="tickets__button tickets__button--contacts"></button>
+              <button href="#events" class="tickets__button tickets__button--contacts"></button>
             </form>
 
           </div>
