make working slider on < 768px resolution

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Roboto:wght@400;500&family=Space+Grotesk:wght@700&family=Space+Mono&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/main.scss">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
   </head>
   <body>
     <div class="upward"></div>
@@ -145,52 +146,36 @@
           <img src="./images/gallery/gallery_image1.jpg"
             alt="gallery-image"
             class="
-            container-gallery
-            container-gallery__image
-            container-gallery__image--1"
-          >
-
-          <img src="./images/gallery/gallery_imageX.jpg"
-            alt="gallery-image"
-            class="
-            container-gallery
-            container-gallery__image
-            container-gallery__image--X"
+            gallery-desktop
+            gallery-desktop__image
+            gallery-desktop__image--1"
           >
 
           <img src="./images/gallery/gallery_image2.jpg"
             alt="gallery-image"
             class="
-            container-gallery
-            container-gallery__image
-            container-gallery__image--2"
+            gallery-desktop
+            gallery-desktop__image
+            gallery-desktop__image--2"
           >
 
           <img src="./images/gallery/gallery_image3.jpg"
             alt="gallery-image"
             class="
-            container-gallery
-            container-gallery__image
-            container-gallery__image--3"
+            gallery-desktop
+            gallery-desktop__image
+            gallery-desktop__image--3"
           >
 
           <img src="./images/gallery/gallery_image4.jpg"
             alt="gallery-image"
             class="
-            container-gallery
-            container-gallery__image
-            container-gallery__image--4"
+            gallery-desktop
+            gallery-desktop__image
+            gallery-desktop__image--4"
           >
         </div>
 
-        <div class="dots">
-          <span class="dot active"></span>
-          <span class="dot"></span>
-          <span class="dot"></span>
-          <span class="dot"></span>
-        </div>
-
-        <!--
         <div class="slider">
           <div class="mySlides fade">
             <img src="./images/gallery/gallery_image1.jpg"
@@ -227,7 +212,6 @@
           <span class="dot"></span>
           <span class="dot"></span>
         </div>
-        -->
       </section>
 
       <section class="subscribe">
