--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
       </div>
     </header>
 
-    <aside class="menu menu__wrapper" id="menu">
+    <aside class="menu" id="menu">
       <nav class="menu__nav">
         <a href="#close" class="icon icon--close"></a>
 
@@ -168,6 +168,7 @@
             <label for="email">
               <input
                 type="email"
+                pattern=".+@example\.com"
                 placeholder="E-mail"
                 size="30"
                 class="subscribe__input"
@@ -190,14 +191,14 @@
 
             <div class="footer__media">
               <a
-                href="https://www.instagram.com/namu.museum/?igshid=YmMyMTA2M2Y%3D"
+                href="https://www.facebook.com/namu.museum"
                 target="_blank"
                 class="icon icon--facebook"
               >
               </a>
 
               <a
-                href="https://www.facebook.com/namu.museum"
+                href="https://www.instagram.com/namu.museum/?igshid=YmMyMTA2M2Y%3D"
                 target="_blank"
                 class="icon icon--instagram"
               >
