add scroll-block and shading-overlay

--- a/src/index.html
+++ b/src/index.html
@@ -18,16 +18,17 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
   </head>
-  <body>
+  <body class="page">
     <div class="upward"></div>
+    <div id="overlay"></div>
 
     <header class="header" id="home">
       <nav class="hamburger">
-        <a class="menuIcon icon icon__menu"></a>
-        <a class="closeIcon icon icon__cross"></a>
+        <a class="menuIcon icon icon__menu" onclick="on()"></a>
+        <a class="closeIcon icon icon__cross" onclick="off()"></a>
       </nav>
 
-      <div class="header__background">
+      <div class="header__background shading-overlay">
         <a href="#" class="header__logo logo"></a>
       </div>
 
@@ -68,7 +69,7 @@
         <article class="menu__article">
           <div class="menu__article--left">
             <p><span class="menu__opening--bold">12:00 — 20:00</span> середа</p>
-            <p><span class="menu__opening--bold">12:00 — 20:00</span>  четвер</p>
+            <p><span class="menu__opening--bold">12:00 — 20:00</span> четвер</p>
             <p><span class="menu__opening--bold">12:00 — 20:00</span> п’ятниця</p>
             <p><span class="menu__opening--bold">11:00 — 19:00</span> субота</p>
             <p><span class="menu__opening--bold">11:00 — 19:00</span> неділя</p>
@@ -90,10 +91,7 @@
           Актуальні події
         </h2>
 
-        <img src="./images/events/events_image1.jpg"
-          alt="events-image"
-          class="picture events__picture"
-        >
+        <img src="./images/events/events_image1.jpg" alt="events-image" class="picture events__picture">
 
         <div class="events__content">
           <p class="events__date">ВИСТАВКА <span class="events__date--highlight">26.08-29.11.2019</span></p>
@@ -103,14 +101,12 @@
           </h3>
 
           <p class="events__info">
-            Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+            Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво
+            другої половини 1980-1995 років.
           </p>
         </div>
 
-        <img src="./images/events/events_image2.jpg"
-          alt="events-image"
-          class="picture events__picture"
-        >
+        <img src="./images/events/events_image2.jpg" alt="events-image" class="picture events__picture">
 
         <div class="events__content">
           <p class="events__date">ВИСТАВКА <span class="events__date--highlight">26.08-29.11.2019</span></p>
@@ -120,7 +116,8 @@
           </h3>
 
           <p class="events__info">
-            Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади i мрії».
+            Національний художній музей України до 100 річчя від дня народження видатної української художниці Тетяни
+            Яблонської відкриває ретроспективну ювілейну виставку «І спогади i мрії».
           </p>
         </div>
       </section>
@@ -143,66 +140,42 @@
         </h2>
 
         <div class="gallery container-gallery">
-          <img src="./images/gallery/gallery_image1.jpg"
-            alt="gallery-image"
-            class="
-            gallery-desktop
-            gallery-desktop__image
-            gallery-desktop__image--1"
-          >
+          <img src="./images/gallery/gallery_image1.jpg" alt="gallery-image" class="
+                  gallery-desktop
+                  gallery-desktop__image
+                  gallery-desktop__image--1">
 
-          <img src="./images/gallery/gallery_image2.jpg"
-            alt="gallery-image"
-            class="
-            gallery-desktop
-            gallery-desktop__image
-            gallery-desktop__image--2"
-          >
+          <img src="./images/gallery/gallery_image2.jpg" alt="gallery-image" class="
+                  gallery-desktop
+                  gallery-desktop__image
+                  gallery-desktop__image--2">
 
-          <img src="./images/gallery/gallery_image3.jpg"
-            alt="gallery-image"
-            class="
-            gallery-desktop
-            gallery-desktop__image
-            gallery-desktop__image--3"
-          >
+          <img src="./images/gallery/gallery_image3.jpg" alt="gallery-image" class="
+                  gallery-desktop
+                  gallery-desktop__image
+                  gallery-desktop__image--3">
 
-          <img src="./images/gallery/gallery_image4.jpg"
-            alt="gallery-image"
-            class="
-            gallery-desktop
-            gallery-desktop__image
-            gallery-desktop__image--4"
-          >
+          <img src="./images/gallery/gallery_image4.jpg" alt="gallery-image" class="
+                  gallery-desktop
+                  gallery-desktop__image
+                  gallery-desktop__image--4">
         </div>
 
         <div class="slider">
           <div class="mySlides fade">
-            <img src="./images/gallery/gallery_image1.jpg"
-              alt="gallery_image1"
-              class="gallery__picture"
-            >
+            <img src="./images/gallery/gallery_image1.jpg" alt="gallery_image1" class="gallery__picture">
           </div>
 
           <div class="mySlides fade">
-            <img src="./images/gallery/gallery_image2.jpg"
-              alt="gallery_image2"
-              class="gallery__picture"
-            >
+            <img src="./images/gallery/gallery_image2.jpg" alt="gallery_image2" class="gallery__picture">
           </div>
 
           <div class="mySlides fade">
-            <img src="./images/gallery/gallery_image3.jpg"
-              alt="gallery_image3"
-              class="gallery__picture"
-            >
+            <img src="./images/gallery/gallery_image3.jpg" alt="gallery_image3" class="gallery__picture">
           </div>
 
           <div class="mySlides fade">
-            <img src="./images/gallery/gallery_image4.jpg"
-              alt="gallery_image4"
-              class="gallery__picture"
-            >
+            <img src="./images/gallery/gallery_image4.jpg" alt="gallery_image4" class="gallery__picture">
           </div>
         </div>
 
@@ -226,23 +199,11 @@
           </p>
 
           <div class="button button--red subscribe__button">
-            <input name="email"
-              type="email"
-              id="email"
-              placeholder="E-mail"
-              class="button
-              button__subscribe"
-              required
-            >
-            <button
-              class="button
-              button__arrow
-              button__arrow--red"
-              type="submit"
-              action="#"
-              id="submit"
-              onsubmit="this.reset(); return false;"
-            >
+            <input name="email" type="email" id="email" placeholder="E-mail" class="button
+                    button__subscribe" required>
+            <button class="button
+                    button__arrow
+                    button__arrow--red" type="submit" action="#" id="submit" onsubmit="this.reset(); return false;">
             </button>
           </div>
         </div>
@@ -251,15 +212,9 @@
       <section class="contact-us" id="contact-us">
         <div class="logo contact-us__logo"></div>
         <div class="socials contact-us__socials">
-          <a
-            href="https://www.facebook.com/"
-            class="socials__fb"
-            target="_blank">
+          <a href="https://www.facebook.com/" class="socials__fb" target="_blank">
           </a>
-          <a
-            href="https://www.instagram.com/"
-            class="socials__insta"
-            target="_blank">
+          <a href="https://www.instagram.com/" class="socials__insta" target="_blank">
           </a>
         </div>
         <div class="opening contact-us__opening">
@@ -267,7 +222,7 @@
 
           <article>
             <p><span class="opening--hour">12:00 — 20:00</span> середа</p>
-            <p><span class="opening--hour">12:00 — 20:00</span>  четвер</p>
+            <p><span class="opening--hour">12:00 — 20:00</span> четвер</p>
             <p><span class="opening--hour">12:00 — 20:00</span> п’ятниця</p>
             <p><span class="opening--hour">11:00 — 19:00</span> субота</p>
             <p><span class="opening--hour">11:00 — 19:00</span> неділя</p>
@@ -306,6 +261,16 @@
       <p class="footer__text">Designed by Zhyriada Marina</p>
       <p class="footer__text">Copyright © 2019. All Rights Reserved.</p>
     </footer>
+
+    <script>
+      function on() {
+        document.getElementById("overlay").style.display = "block";
+      }
+
+      function off() {
+        document.getElementById("overlay").style.display = "none";
+      }
+    </script>
 
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
