fix background-color when menu:target

--- a/src/index.html
+++ b/src/index.html
@@ -74,6 +74,8 @@
           до закриття музею
         </p>
       </div>
+
+      <div class="menu__bottom"></div>
     </aside>
 
     <main class="main">
