--- a/src/index.html
+++ b/src/index.html
@@ -52,10 +52,34 @@
     <div class="menu">
       <nav class="menu__links">
         <ul class="menu__list">
-          <li class="menu__item"><a href="#gallery" class="menu__link">Галерея</a></li>
-          <li class="menu__item"><a href="#home" class="menu__link">Про Hac</a></li>
-          <li class="menu__item"><a href="#events" class="menu__link">Виставки та події</a></li>
-          <li class="menu__item"><a href="#contact-us" class="menu__link">Контакти</a></li>
+          <li class="menu__item">
+            <a href="#gallery"
+              class="menu__link"
+              onclick="off()">
+              Галерея
+            </a>
+          </li>
+          <li class="menu__item">
+            <a href="#home"
+              class="menu__link"
+              onclick="off()">
+              Про Hac
+            </a>
+          </li>
+          <li class="menu__item">
+            <a href="#events"
+              class="menu__link"
+              onclick="off()">
+              Виставки та події
+            </a>
+          </li>
+          <li class="menu__item">
+            <a href="#contact-us"
+              class="menu__link"
+              onclick="off()">
+              Контакти
+            </a>
+          </li>
         </ul>
       </nav>
 
@@ -91,7 +115,10 @@
           Актуальні події
         </h2>
 
-        <img src="./images/events/events_image1.jpg" alt="events-image" class="picture events__picture">
+        <img src="./images/events/events_image1.jpg"
+          alt="events-image"
+          class="picture events__picture"
+        >
 
         <div class="events__content">
           <p class="events__date">ВИСТАВКА <span class="events__date--highlight">26.08-29.11.2019</span></p>
@@ -106,7 +133,11 @@
           </p>
         </div>
 
-        <img src="./images/events/events_image2.jpg" alt="events-image" class="picture events__picture">
+        <img
+          src="./images/events/events_image2.jpg"
+          alt="events-image"
+          class="picture events__picture"
+        >
 
         <div class="events__content">
           <p class="events__date">ВИСТАВКА <span class="events__date--highlight">26.08-29.11.2019</span></p>
@@ -140,42 +171,64 @@
         </h2>
 
         <div class="gallery container-gallery">
-          <img src="./images/gallery/gallery_image1.jpg" alt="gallery-image" class="
-                  gallery-desktop
-                  gallery-desktop__image
-                  gallery-desktop__image--1">
+          <img src="./images/gallery/gallery_image1.jpg"
+            alt="gallery-image"
+            class="gallery-desktop
+            gallery-desktop__image
+            gallery-desktop__image--1"
+          >
 
-          <img src="./images/gallery/gallery_image2.jpg" alt="gallery-image" class="
-                  gallery-desktop
-                  gallery-desktop__image
-                  gallery-desktop__image--2">
+          <img src="./images/gallery/gallery_image2.jpg"
+            alt="gallery-image"
+            class="gallery-desktop
+            gallery-desktop__image
+            gallery-desktop__image--2"
+          >
 
-          <img src="./images/gallery/gallery_image3.jpg" alt="gallery-image" class="
-                  gallery-desktop
-                  gallery-desktop__image
-                  gallery-desktop__image--3">
+          <img src="./images/gallery/gallery_image3.jpg"
+            alt="gallery-image"
+            class="gallery-desktop
+            gallery-desktop__image
+            gallery-desktop__image--3"
+          >
 
-          <img src="./images/gallery/gallery_image4.jpg" alt="gallery-image" class="
-                  gallery-desktop
-                  gallery-desktop__image
-                  gallery-desktop__image--4">
+          <img src="./images/gallery/gallery_image4.jpg"
+            alt="gallery-image"
+            class="gallery-desktop
+            gallery-desktop__image
+            gallery-desktop__image--4"
+          >
         </div>
 
         <div class="slider">
           <div class="mySlides fade">
-            <img src="./images/gallery/gallery_image1.jpg" alt="gallery_image1" class="gallery__picture">
+            <img
+              src="./images/gallery/gallery_image1.jpg"
+              alt="gallery_image1"
+              class="gallery__picture"
+            >
           </div>
 
           <div class="mySlides fade">
-            <img src="./images/gallery/gallery_image2.jpg" alt="gallery_image2" class="gallery__picture">
+            <img
+              src="./images/gallery/gallery_image2.jpg"
+              alt="gallery_image2"
+              class="gallery__picture"
+            >
           </div>
 
           <div class="mySlides fade">
-            <img src="./images/gallery/gallery_image3.jpg" alt="gallery_image3" class="gallery__picture">
+            <img
+              src="./images/gallery/gallery_image3.jpg"
+              alt="gallery_image3" class="gallery__picture"
+            >
           </div>
 
           <div class="mySlides fade">
-            <img src="./images/gallery/gallery_image4.jpg" alt="gallery_image4" class="gallery__picture">
+            <img
+              src="./images/gallery/gallery_image4.jpg"
+              alt="gallery_image4" class="gallery__picture"
+            >
           </div>
         </div>
 
@@ -198,23 +251,34 @@
             Бути в курсі всіх актуальних подій та останніх новин.
           </p>
 
-          <div class="button button--red subscribe__button">
-            <input name="email" type="email" id="email" placeholder="E-mail" class="button
-                    button__subscribe" required>
-            <button class="button
-                    button__arrow
-                    button__arrow--red" type="submit" action="#" id="submit" onsubmit="this.reset(); return false;">
-            </button>
-          </div>
+          <form id="subscribeForm" class="button button--red subscribe__button">
+            <input
+              name="email"
+              type="email"
+              id="email"
+              placeholder="E-mail"
+              class="button button__subscribe"
+              required
+            >
+            <button
+              class="button button__arrow button__arrow--red"
+              type="submit"
+              id="submit"
+            ></button>
+          </form>
         </div>
       </section>
 
       <section class="contact-us" id="contact-us">
         <div class="logo contact-us__logo"></div>
         <div class="socials contact-us__socials">
-          <a href="https://www.facebook.com/" class="socials__fb" target="_blank">
+          <a href="https://www.facebook.com/"
+            class="socials__fb"
+            target="_blank">
           </a>
-          <a href="https://www.instagram.com/" class="socials__insta" target="_blank">
+          <a href="https://www.instagram.com/"
+            class="socials__insta"
+            target="_blank">
           </a>
         </div>
         <div class="opening contact-us__opening">
@@ -235,11 +299,29 @@
         </div>
 
         <address class="address contact-us__address">
-          <h4 class="title title__fourth">Контакти:</h4>
-          <p class="address__address">вул. M. Грушевського, 6; Київ, 01001</p>
-          <p class="address__phone">тел. +38 (044) 278-13-57</p>
-          <p class="address__fax">факс +38 (044) <span class="address__fax--br">278-74-54</span></p>
-          <p class="address__email">e-mail: info@namu.kiev.ua</p>
+          <h4 class="title title__fourth">
+            Контакти:
+          </h4>
+
+          <a href="#"
+            class="address address__address">
+            вул. M. Грушевського, 6; Київ, 01001
+          </a>
+
+          <a href="tel:+38(044)-278-13-57"
+            class="address address__phone">
+            тел. +38 (044) 278-13-57
+          </a>
+
+          <a href="#"
+            class="address address__fax">
+            факс +38 (044)<span class="address__fax--br"> 278-74-54</span>
+          </a>
+
+          <a href="mailto:info@namu.kiev.ua"
+            class="address address__email">
+            e-mail: info@namu.kiev.ua
+          </a>
         </address>
 
         <div class="line contact-us__line">
