fix size of section

--- a/src/index.html
+++ b/src/index.html
@@ -173,6 +173,7 @@
                 pattern=".+@example\.com"
                 placeholder="E-mail"
                 size="30"
+                id="email"
                 class="subscribe__input"
                 required
               >
