--- a/src/index.html
+++ b/src/index.html
@@ -263,7 +263,7 @@
               </a>
 
               <div class="contact-us__social-nets">
-                <a href="https://uk-ua.facebook.com/">
+                <a href="https://uk-ua.facebook.com/" target="_blank">
                   <img
                   src="./images/icons/icon-facebook.svg"
                   alt="facebook"
@@ -271,7 +271,7 @@
                 >
                 </a>
 
-                <a href="https://www.instagram.com/">
+                <a href="https://www.instagram.com/" target="_blank">
                   <img
                   src="./images/icons/icon-instagram.svg"
                   alt="instagram"
@@ -298,20 +298,44 @@
 
                 <div class="contact-us__contacts">
                   <div class="contact-us__title">Контакти:</div>
-                  <div class="contact-us__contact">
+                  <div>
                     <p>
-                      вул. М. Грушевського, 6; Київ, 01001
+                      <a
+                        href="https://maps.app.goo.gl/Em8AtwAbzyjLQcix6"
+                        target="_blank"
+                        class="contact-us__contact"
+                      >
+                        вул. М. Грушевського, 6; Київ, 01001
+                      </a>
                       <br>
-                      тел. +38 (044) 278-13-57
+                      <a
+                        href="tel:+38 (044) 278-13-57"
+                        target="_blank"
+                        class="contact-us__contact"
+                      >
+                        тел.+38 (044) 278-13-57
+                      </a>
                       <br>
-                      факс +38 (044) 278-74-54
+                      <a
+                        href="tel:+38 (044) 278-74-54"
+                        target="_blank"
+                        class="contact-us__contact"
+                      >
+                        факс +38 (044) 278-74-54
+                      </a>
                       <br>
-                      e-mail: info@namu.kiev.ua
+                      <a
+                        href="mailto: info@namu.kiev.ua"
+                        target="_blank"
+                        class="contact-us__contact"
+                      >
+                        e-mail: info@namu.kiev.ua
+                      </a>
                     </p>
                   </div>
                 </div>
               </div>
-              <div class="contact-us__button-container">
+              <a href="#" class="contact-us__button-container">
                 <div class="contact-us__top-button">
                   <img
                     src="./images/icons/top-arrow.svg"
@@ -319,7 +343,7 @@
                     class="contact-us__top-arrow"
                   >
                 </div>
-              </div>
+              </a>
               <div class="contact-us__navigation">
                 <div class="contact-us__footer-contact">
                   <div class="footer__footer-block">
