Refactor according to suggested improvements

--- a/src/index.html
+++ b/src/index.html
@@ -13,11 +13,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-    <script type="text/javascript" src="scripts/main.js"></script>
-    <script src="scripts/main.js" defer></script>
   </head>
   <body class="page__body" id="home">
-    <header class="header page__section">
+    <header class="header page__section page__section--header">
       <div class="container">
         <img
           class="header__image"
@@ -38,7 +36,7 @@
             </a>
           </div>
 
-          <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+          <h1 class="header__title">ХУДОЖНІЙ <br> МУЗЕЙ</h1>
 
           <a href="#events" class="header__tickets tickets">
             <div class="tickets__title">Квитки</div>
@@ -211,6 +209,7 @@
               action="/"
               method="post"
               class="contacts__form grid__item--desktop-4-9 grid__item--tablet-2-5 grid__item--mobile-1-2"
+              autocomplete="off"
             >
               <input
                 name="E-mail"
@@ -220,7 +219,10 @@
                 required
               >
 
-              <button href="#events" class="tickets__button tickets__button--contacts"></button>
+              <button
+                href="#events"
+                class="tickets__button tickets__button--contacts" type="submit"
+              ></button>
             </form>
 
           </div>
@@ -345,5 +347,6 @@
         </div>
       </footer>
     </main>
+    <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
